feat: Enhance Profile Screen with Options and Logout Functionality
- Added ProfileOption component for better organization of profile options.
- Integrated navigation for "My Orders", "Wishlist", and "Account Settings".
- Improved layout and styling for the profile screen.
- Updated logout button with icon and adjusted positioning.

feat: Refactor Product Screen to Use API Utility

- Replaced direct fetch calls with api utility for fetching product details.
- Enhanced image handling logic to support various formats and errors.
- Implemented add to cart functionality with loading state.

feat: Implement Image Carousel with Error Handling

- Created ImageCarousel component to display product images.
- Added placeholder image for failed loads and improved image validation.

feat: Introduce Orders Management with Detail View

- Created order detail screen to display order information and items.
- Implemented orders list screen with refresh functionality and navigation.
- Added styles and layout for better user experience in orders section.

chore: Add EAS configuration for build and submission

- Created eas.json for managing build configurations and submission settings.

feat: Update API Types and Utility Functions

- Added new types for orders and shipping details.
- Enhanced API utility functions for cart management and order retrieval.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
+    "name": "lelekart",
+    "slug": "lelekart",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.clusterider.lelekart"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,15 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "3b38603f-c2d3-40f7-bfd3-e5433755aaf2"
+      }
+    },
+    "owner": "clusterider"
   }
 }
